= Changelog
:toc: macro
:project-url: https://github.com/sorairolake/rscrypt
:compare-url: {project-url}/compare
:issue-url: {project-url}/issues
:pull-request-url: {project-url}/pull

All notable changes to this project will be documented in this file.

The format is based on https://keepachangelog.com/[Keep a Changelog], and this
project adheres to https://semver.org/[Semantic Versioning].

toc::[]

== {compare-url}/v0.1.1\...HEAD[Unreleased]

=== Added

* Add options related to resources

== {compare-url}/v0.1.0\...v0.1.1[0.1.1] - 2022-11-24

=== Changed

* Move common code into functions

=== Fixed

* Change to not read both passphrase and input data from stdin at the same time

== {project-url}/releases/tag/v0.1.0[0.1.0] - 2022-11-18

=== Added

* Initial release