@@ -80,27 +80,27 @@ _OUTFILE_::
 
 *--passphrase-from-tty*::
 
-  Read the passphrase from /dev/tty.
+  Read the password from /dev/tty.
   This is the default behavior.
 
 *--passphrase-from-stdin*::
 
-  Read the passphrase from stdin.
+  Read the password from stdin.
 
 *--passphrase-from-tty-once*::
 
-  Read the passphrase from /dev/tty only once.
+  Read the password from /dev/tty only once.
 
 *--passphrase-from-env* _VAR_::
 
-  Read the passphrase from the environment variable.
-  Note that storing a passphrase in an environment variable can be a security
+  Read the password from the environment variable.
+  Note that storing a password in an environment variable can be a security
   risk.
 
 *--passphrase-from-file* _FILE_::
 
-  Read the passphrase from the file.
-  Note that storing a passphrase in a file can be a security risk.
+  Read the password from the file.
+  Note that storing a password in a file can be a security risk.
 
 *-v*, *--verbose*::
 
