@@ -50,7 +50,7 @@ pub enum Command {
 #[allow(clippy::struct_excessive_bools)]
 #[derive(Args, Debug)]
 #[command(
-    group(ArgGroup::new("passphrase")),
+    group(ArgGroup::new("password")),
     group(
         ArgGroup::new("resources")
             .multiple(true)
@@ -124,35 +124,35 @@ pub struct Encrypt {
     )]
     pub p: Option<u32>,
 
-    /// Read the passphrase from /dev/tty.
+    /// Read the password from /dev/tty.
     ///
     /// This is the default behavior.
-    #[arg(long, group("passphrase"))]
+    #[arg(long, group("password"))]
     pub passphrase_from_tty: bool,
 
-    /// Read the passphrase from stdin.
-    #[arg(long, group("passphrase"))]
+    /// Read the password from stdin.
+    #[arg(long, group("password"))]
     pub passphrase_from_stdin: bool,
 
-    /// Read the passphrase from /dev/tty only once.
-    #[arg(long, group("passphrase"))]
+    /// Read the password from /dev/tty only once.
+    #[arg(long, group("password"))]
     pub passphrase_from_tty_once: bool,
 
-    /// Read the passphrase from the environment variable.
+    /// Read the password from the environment variable.
     ///
-    /// Note that storing a passphrase in an environment variable can be a
+    /// Note that storing a password in an environment variable can be a
     /// security risk.
-    #[arg(long, value_name("VAR"), group("passphrase"))]
+    #[arg(long, value_name("VAR"), group("password"))]
     pub passphrase_from_env: Option<OsString>,
 
-    /// Read the passphrase from the file.
+    /// Read the password from the file.
     ///
-    /// Note that storing a passphrase in a file can be a security risk.
+    /// Note that storing a password in a file can be a security risk.
     #[arg(
         long,
         value_name("FILE"),
         value_hint(ValueHint::FilePath),
-        group("passphrase")
+        group("password")
     )]
     pub passphrase_from_file: Option<PathBuf>,
 
@@ -176,7 +176,7 @@ pub struct Encrypt {
 #[allow(clippy::struct_excessive_bools)]
 #[derive(Args, Debug)]
 #[command(
-    group(ArgGroup::new("passphrase")),
+    group(ArgGroup::new("password")),
     group(ArgGroup::new("resources").multiple(true).conflicts_with("force"))
 )]
 pub struct Decrypt {
@@ -211,31 +211,31 @@ pub struct Decrypt {
     )]
     pub max_time: Time,
 
-    /// Read the passphrase from /dev/tty.
+    /// Read the password from /dev/tty.
     ///
     /// This is the default behavior.
-    #[arg(long, group("passphrase"))]
+    #[arg(long, group("password"))]
     pub passphrase_from_tty: bool,
 
-    /// Read the passphrase from stdin.
-    #[arg(long, group("passphrase"))]
+    /// Read the password from stdin.
+    #[arg(long, group("password"))]
     pub passphrase_from_stdin: bool,
 
-    /// Read the passphrase from the environment variable.
+    /// Read the password from the environment variable.
     ///
-    /// Note that storing a passphrase in an environment variable can be a
+    /// Note that storing a password in an environment variable can be a
     /// security risk.
-    #[arg(long, value_name("VAR"), group("passphrase"))]
+    #[arg(long, value_name("VAR"), group("password"))]
     pub passphrase_from_env: Option<OsString>,
 
-    /// Read the passphrase from the file.
+    /// Read the password from the file.
     ///
-    /// Note that storing a passphrase in a file can be a security risk.
+    /// Note that storing a password in a file can be a security risk.
     #[arg(
         long,
         value_name("FILE"),
         value_hint(ValueHint::FilePath),
-        group("passphrase")
+        group("password")
     )]
     pub passphrase_from_file: Option<PathBuf>,
 
